# contextgeneric.dev

./: atom.xml  config.toml  docusaurus.config.ts  flake.nix  index.html  juice.css  package-lock.json  package.json  robots.txt  search_index.en.js  sitemap.xml
.github/workflows/: publish.yaml
blog/: 2024-12-19-early-preview-announcement.md  2025-01-09-v0.3.0-release.md  2025-05-09-v0.4.0-release.md  2025-06-14-v0.4.1-release.md  2025-07-07-extensible-datatypes-part-1.md  2025-07-09-extensible-datatypes-part-2.md  2025-07-12-extensible-datatypes-part-3.md  2025-07-30-extensible-datatypes-part-4.md  2025-10-12-v0.5.0-release.md  2025-10-26-v0.6.0-release.md  2025-11-03-cgp-serde-release.md  2026-02-01-v0.6.1-release.md  2026-02-21-new-website.md  2026-02-23-v0.6.2-release.md  2026-02-28-v0.7.0-release.md  authors.yml  index.html  tags.yml
blog/2025-06-14-hypershell-release/: index.md
blog/2026-03-07-rustlab-2025-coherence/: index.md
blog/cgp-serde-release/: index.html
blog/early-preview-announcement/: index.html
blog/extensible-datatypes-part-1/: index.html
blog/extensible-datatypes-part-2/: index.html
blog/extensible-datatypes-part-3/: index.html
blog/extensible-datatypes-part-4/: index.html
blog/hypershell-release/: index.html
blog/v0-3-0-release/: index.html
code/: Cargo.toml
code/src/: lib.rs  main.rs
content/: _index.md  contribute.md  hire.md  overview.md  resources.md
content/blog/: _index.md  (+23 more)
contribute/: index.html
docs/: contribute.md  index.md  overview.md  resources.md
hire/: index.html
notes/: implcit-params.md
overview/: index.html
resources/: index.html
static/: CNAME
templates/: _variables.html  article.html  article_page.html  blog.html  blog_page.html  index.html  page.html
tutorials/: index.html
(+39 files in other folders)
